--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,9 +18,11 @@
     "agora-rtc-sdk-ng": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
