--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
