--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
 SOCKET = 8080
-MONGO_URL = "mongodb+srv://kidmilli:ninja2024db@ninja-db.kcuiq.mongodb.net/dbconnect"
+MONGO_URL = "mongodb+srv://kidmilli:tonpa1-bybzak-tiMsyf@ninja-db.kcuiq.mongodb.net/dbconnect"   
