--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,12 +16,14 @@
     "@splinetool/react-spline": "^4.0.0",
     "agora-rtc-react": "^2.2.0",
     "agora-rtc-sdk-ng": "^4.21.0",
+    "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.11",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
