--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/material": "^5.16.7",
     "@splinetool/react-spline": "^4.0.0",
     "agora-rtc-react": "^2.2.0",
@@ -19,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
